--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "playup",
   "version": "1.1.0",
   "description": "Publish APKs to Google Play Store",
-  "main": "lib/index.js",
+  "main": "src/index.js",
   "bin": {
     "playup": "cli.js"
   },
