--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/jeduan/google-play-publisher"
+    "url": "https://github.com/mzgs/playup/blob/master/package.json"
   },
   "keywords": [
     "android",
@@ -29,9 +29,9 @@
   "author": "Jeduan Cornejo <jeduan@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/jeduan/google-play-publisher/issues"
+    "url": "https://github.com/mzgs/playup/blob/master/package.json/issues"
   },
-  "homepage": "https://github.com/jeduan/google-play-publisher",
+  "homepage": "https://github.com/mzgs/playup/blob/master/package.json",
   "dependencies": {
     "debug": "^2.1.3",
     "googleapis": "^2.0.2",
