--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "mobile",
     "apk"
   ],
-  "author": "Jeduan Cornejo <mblx1627@gmail.com>",
+  "author": "Mustafa <mblx1627@gmail.com>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/mzgs/playup"
