--- a/package.json
+++ b/package.json
@@ -2,21 +2,21 @@
   "name": "playup",
   "version": "1.1.0",
   "description": "Publish APKs to Google Play Store",
-  "main": "src/index.js",
+  "main": "lib/index.js",
   "bin": {
     "playup": "cli.js"
   },
   "scripts": {
     "prepublish": "npm run build && npm prune",
-    "build": "babel src --modules common --out-dir src",
-    "build-debug": "babel src --modules common --out-dir src --source-maps inline",
-    "watch": "babel src --watch --modules common --out-dir src --source-maps true",
+    "build": "babel src --modules common --out-dir lib",
+    "build-debug": "babel src --modules common --out-dir lib --source-maps inline",
+    "watch": "babel src --watch --modules common --out-dir lib --source-maps true",
     "test": "standard && tap test/*.js",
     "test-lcov": "standard &&  tap --coverage-report=lcov --coverage test/*.js"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/mzgs/playup"
+    "url": "https://github.com/jeduan/google-play-publisher"
   },
   "keywords": [
     "android",
@@ -26,12 +26,12 @@
     "mobile",
     "apk"
   ],
-  "author": "Mustafa <mblx1627@gmail.com>",
+  "author": "Jeduan Cornejo <jeduan@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/mzgs/playup"
+    "url": "https://github.com/jeduan/google-play-publisher/issues"
   },
-  "homepage": "https://github.com/mzgs/playup",
+  "homepage": "https://github.com/jeduan/google-play-publisher",
   "dependencies": {
     "debug": "^2.1.3",
     "googleapis": "^2.0.2",
